# Turret-Control

apriltag_reader/: package.xml  setup.cfg  setup.py
apriltag_reader/apriltag_reader/: tag_pose_reader.py
apriltag_ros/cfg/: tags_36h11.yaml
apriltag_ros/launch/: camera_36h11.launch.yml
camera_initialization/: package.xml  setup.cfg  setup.py
camera_initialization/camera_initialization/: initialize_camera.py
turret_control/: CMakeLists.txt  README.md  SERVO_MODE_GUIDE.md
turret_control/examples/: servo_mode_demo.cpp
turret_control/include/: cubemars_control.h  pdb.h  pi3hat.h
turret_control/src/: cubemars_control.cpp  main.cpp  pdb.cpp  spool_test.cpp
